# data-pipelines-with-apache-airflow

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
dags/: 01_unscheduled.py  download_rocket_launches.py  simple_example_dag.py
dags/chapter2/: download_rocket_launches.py
dags/chapter2/scripts/: get_pictures.py
dags/chapter3/: 01_unscheduled.py
dags/chapter4/: daily_pageviews_summary.py  print_context.py  stock_sense.py
dags/chapter5/: branch_dag.py  taskflow_api.py  xcoms.py
dags/chapter6/: external_task_sensor.py  ingest_supermarket_data.py  supermarket_promotion.py
dags/chapter7/: test_postgres_to_csv.py
scripts/: run_chapter8_api.sh
src/: Dockerfile  docker-compose.yaml  requirements.txt
src/airflow-movielens/: pyproject.toml  setup.py
src/airflow-movielens/src/airflow_movielens/: hooks.py  operators.py  sensors.py
src/airflow-movielens/src/airflow_movielens.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/airflow-movielens/src/common/: print_common.py
src/dags/chapter10/: docker-compose.yaml  docker_dag.py  k8s_dag.py
src/dags/chapter11/: dag_factory.py  task_factory.py
src/dags/chapter2/: download_rocket_launches.py
src/movielens-api/: app.py
src/scripts/: get_pictures.py
tests/: conftest.py  test_dag_sumarry.py  test_operators.py
tests/chapter9/: example_operators.py  test_docker_tools.py  test_json_to_csv_operator.py  test_movielens_operator.py  test_movielens_operator2.py  test_operators.py  test_operators2.py
tests/common/: test_fixture.py
tests/dags/: test_dag_integrity.py
(+23 files in other folders)
