# pyproject.toml (최종 수정안)

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airflow-movielens"
version = "0.1.0"
description = "Hooks, sensors and operators for the Movielens API."
license = { text = "MIT License" }
requires-python = ">=3.8"

dependencies = [
    "apache-airflow==2.9.1",
    "requests",
]

[tool.setuptools]
package-dir = { "" = "src" }

packages = { find = { where = ["src"] } } # <--- 핵심 수정 부분